# cpp-feedforward-net

./: .gitattributes  .gitignore  ActivationFunction.hpp  AdamBuffer.hpp  AdamOptimiser.hpp  BackpropResult.hpp  CMakeLists.txt  CostType.hpp  DataSet.hpp  FFNN.cpp  FFNN.hpp  ForwardResult.hpp  GradientDescentOptimiser.hpp  LrSchedulers.hpp  Matrix.cpp  NN_Utils.hpp  RegularizationType.hpp  Trainer.hpp  TrainingData.hpp  Workspace.hpp  main.cpp  play  readme.md  t  test.cpp  train
MNIST/: MNIST.cpp  MNIST_inference.cpp  Transform_Data_To_Binary.cpp  optimising.md
MNIST/mnist-frontend/: package-lock.json  package.json
MNIST/mnist-frontend/src/pages/: index.tsx
connect4/: Agent.hpp  agentTools.hpp  connect4.hpp  enums.hpp  generate_training_data.cpp  interface.cpp  train.cpp
connect4/agents/: FFNN.hpp  Human.hpp  Negamax.hpp  Random.hpp
image-gen/: Documentation.md  image_gen.cpp
old/: FFNN.cpp
spiral/: spiral.cpp
tests/: run_tests.sh  test_batcher.cpp  test_connect4.cpp  test_gradients.cpp  test_serialization.cpp
tictactoe/: Agent.hpp  TranspositionTable.hpp  agentTools.hpp  enums.hpp  interface.cpp  tictactoe.hpp  train.cpp
tictactoe/agents/: FFNN.hpp  Human.hpp  MinimaxAgent.hpp  MinimaxRev1.hpp  MinimaxRev2.hpp  MinimaxRev3.hpp  MinimaxRev4.hpp  MinimaxRev5.hpp  OldMinimaxAgent.hpp  Random.hpp  RandomAgent.hpp
